# AmIWorking

./: .gitignore  README.md  pyproject.toml
config/: settings.toml
src/phone_detection/: _main_original.py  camera.py  config.py  logic.py  main.py  visualize.py
src/phone_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/phone_detection/config/: .settings.toml.swp
src/phone_detection/detectors/: face.py  hand.py  phone.py
