[project]
name = "phone-detection"
version = "0.1.0" ##### hahahahahaha
requires-python = ">=3.12"
dependencies = [
    "opencv-python",
    "mediapipe",
    "ultralytics",
    "numpy",
    ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
